--- a/_apis/stripe/overlays/treasury-openapi-search.yml
+++ b/_apis/stripe/overlays/treasury-openapi-search.yml
@@ -6,15 +6,17 @@ paths:
     get:
       description: <p>Returns a list of CreditReversals.</p>
       tags:
-        - V1
+        - Credit
+        - Reversals
         - Treasury
-        - Credit_reversals
+      summary: Retrieve Treasury Credit Reversals
     post:
       description: <p>Reverses a ReceivedCredit and creates a CreditReversal object.</p>
       tags:
-        - V1
+        - Credit
+        - Reversals
         - Treasury
-        - Credit_reversals
+      summary: Create Treasury Credit Reversals
   /v1/treasury/credit_reversals/{credit_reversal}:
     get:
       description: >-
@@ -22,208 +24,135 @@ paths:
         unique CreditReversal ID from either the CreditReversal creation request
         or CreditReversal list</p>
       tags:
-        - V1
+        - Credit
+        - Reversals
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
+      summary: Retrieve Treasury Credit Reversals Credit Reversal
   /v1/treasury/debit_reversals:
     get:
       description: <p>Returns a list of DebitReversals.</p>
       tags:
-        - V1
+        - Debit
+        - Reversals
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
+      summary: Retrieve Treasury Debit Reversals
     post:
       description: <p>Reverses a ReceivedDebit and creates a DebitReversal object.</p>
       tags:
-        - V1
+        - Debit
+        - Reversals
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
+      summary: Create Treasury Debit Reversals
   /v1/treasury/debit_reversals/{debit_reversal}:
     get:
       description: <p>Retrieves a DebitReversal object.</p>
       tags:
-        - V1
+        - Debit
+        - Reversals
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
+      summary: Retrieve Treasury Debit Reversals Debit Reversal
   /v1/treasury/financial_accounts:
     get:
       description: <p>Returns a list of FinancialAccounts.</p>
       tags:
-        - V1
+        - Accounts
+        - Financial
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
+      summary: Retrieve Treasury Financial Accounts
     post:
       description: >-
         <p>Creates a new FinancialAccount. For now, each connected account can
         only have one FinancialAccount.</p>
       tags:
-        - V1
+        - Accounts
+        - Financial
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
+      summary: Create Treasury Financial Accounts
   /v1/treasury/financial_accounts/{financial_account}:
     get:
       description: <p>Retrieves the details of a FinancialAccount.</p>
       tags:
-        - V1
+        - Accounts
+        - Financial
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
+      summary: Retrieve Treasury Financial Accounts Financial Account
     post:
       description: <p>Updates the details of a FinancialAccount.</p>
       tags:
-        - V1
+        - Accounts
+        - Financial
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
+      summary: Create Treasury Financial Accounts Financial Account
   /v1/treasury/financial_accounts/{financial_account}/features:
     get:
       description: >-
         <p>Retrieves Features information associated with the
         FinancialAccount.</p>
       tags:
-        - V1
-        - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
+        - Accounts
         - Features
+        - Financial
+        - Treasury
+      summary: Retrieve Treasury Financial Accounts Financial Account Features
     post:
       description: <p>Updates the Features associated with a FinancialAccount.</p>
       tags:
-        - V1
-        - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
+        - Accounts
         - Features
+        - Financial
+        - Treasury
+      summary: Create Treasury Financial Accounts Financial Account Features
   /v1/treasury/inbound_transfers:
     get:
       description: >-
         <p>Returns a list of InboundTransfers sent from the specified
         FinancialAccount.</p>
       tags:
-        - V1
+        - Inbound
+        - Transfers
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
+      summary: Retrieve Treasury Inbound Transfers
     post:
       description: <p>Creates an InboundTransfer.</p>
       tags:
-        - V1
+        - Inbound
+        - Transfers
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
+      summary: Create Treasury Inbound Transfers
   /v1/treasury/inbound_transfers/{id}:
     get:
       description: <p>Retrieves the details of an existing InboundTransfer.</p>
       tags:
-        - V1
+        - Inbound
+        - Transfers
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
+      summary: Retrieve Treasury Inbound Transfers Id
   /v1/treasury/inbound_transfers/{inbound_transfer}/cancel:
     post:
       description: <p>Cancels an InboundTransfer.</p>
       tags:
-        - V1
-        - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
         - Cancel
+        - Inbound
+        - Transfers
+        - Treasury
+      summary: Create Treasury Inbound Transfers Inbound Transfer Cancel
   /v1/treasury/outbound_payments:
     get:
       description: >-
         <p>Returns a list of OutboundPayments sent from the specified
         FinancialAccount.</p>
       tags:
-        - V1
+        - Outbound
+        - Payments
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
+      summary: Retrieve Treasury Outbound Payments
     post:
       description: <p>Creates an OutboundPayment.</p>
       tags:
-        - V1
+        - Outbound
+        - Payments
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
+      summary: Create Treasury Outbound Payments
   /v1/treasury/outbound_payments/{id}:
     get:
       description: >-
@@ -231,77 +160,36 @@ paths:
         unique OutboundPayment ID from either the OutboundPayment creation
         request or OutboundPayment list.</p>
       tags:
-        - V1
+        - Outbound
+        - Payments
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
+      summary: Retrieve Treasury Outbound Payments Id
   /v1/treasury/outbound_payments/{id}/cancel:
     post:
       description: <p>Cancel an OutboundPayment.</p>
       tags:
-        - V1
-        - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
         - Cancel
-        - Outbound_payments
+        - Outbound
+        - Payments
+        - Treasury
+      summary: Create Treasury Outbound Payments Id Cancel
   /v1/treasury/outbound_transfers:
     get:
       description: >-
         <p>Returns a list of OutboundTransfers sent from the specified
         FinancialAccount.</p>
       tags:
-        - V1
+        - Outbound
+        - Transfers
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
+      summary: Retrieve Treasury Outbound Transfers
     post:
       description: <p>Creates an OutboundTransfer.</p>
       tags:
-        - V1
+        - Outbound
+        - Transfers
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
+      summary: Create Treasury Outbound Transfers
   /v1/treasury/outbound_transfers/{outbound_transfer}:
     get:
       description: >-
@@ -309,225 +197,84 @@ paths:
         unique OutboundTransfer ID from either the OutboundTransfer creation
         request or OutboundTransfer list.</p>
       tags:
-        - V1
+        - Outbound
+        - Transfers
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
+      summary: Retrieve Treasury Outbound Transfers Outbound Transfer
   /v1/treasury/outbound_transfers/{outbound_transfer}/cancel:
     post:
       description: >-
         <p>An OutboundTransfer can be canceled if the funds have not yet been
         paid out.</p>
       tags:
-        - V1
-        - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
         - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
+        - Outbound
+        - Transfers
+        - Treasury
+      summary: Create Treasury Outbound Transfers Outbound Transfer Cancel
   /v1/treasury/received_credits:
     get:
       description: <p>Returns a list of ReceivedCredits.</p>
       tags:
-        - V1
+        - Credits
+        - Received
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
-        - Received_credits
+      summary: Retrieve Treasury Received Credits
   /v1/treasury/received_credits/{id}:
     get:
       description: >-
         <p>Retrieves the details of an existing ReceivedCredit by passing the
         unique ReceivedCredit ID from the ReceivedCredit list.</p>
       tags:
-        - V1
+        - Credits
+        - Received
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
-        - Received_credits
+      summary: Retrieve Treasury Received Credits Id
   /v1/treasury/received_debits:
     get:
       description: <p>Returns a list of ReceivedDebits.</p>
       tags:
-        - V1
+        - Debits
+        - Received
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
-        - Received_credits
-        - Received_debits
+      summary: Retrieve Treasury Received Debits
   /v1/treasury/received_debits/{id}:
     get:
       description: >-
         <p>Retrieves the details of an existing ReceivedDebit by passing the
         unique ReceivedDebit ID from the ReceivedDebit list</p>
       tags:
-        - V1
+        - Debits
+        - Received
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
-        - Received_credits
-        - Received_debits
+      summary: Retrieve Treasury Received Debits Id
   /v1/treasury/transaction_entries:
     get:
       description: <p>Retrieves a list of TransactionEntry objects.</p>
       tags:
-        - V1
+        - Entries
+        - Transactions
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
-        - Received_credits
-        - Received_debits
-        - Transaction_entries
+      summary: Retrieve Treasury Transaction Entries
   /v1/treasury/transaction_entries/{id}:
     get:
       description: <p>Retrieves a TransactionEntry object.</p>
       tags:
-        - V1
+        - Entries
+        - Transactions
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
-        - Received_credits
-        - Received_debits
-        - Transaction_entries
+      summary: Retrieve Treasury Transaction Entries Id
   /v1/treasury/transactions:
     get:
       description: <p>Retrieves a list of Transaction objects.</p>
       tags:
-        - V1
-        - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
-        - Received_credits
-        - Received_debits
-        - Transaction_entries
         - Transactions
+        - Treasury
+      summary: Retrieve Treasury Transactions
   /v1/treasury/transactions/{id}:
     get:
       description: <p>Retrieves the details of an existing Transa
       tags:
-        - V1
+        - Transactions
         - Treasury
-        - Credit_reversals
-        - Credit_reversal
-        - Debit_reversals
-        - Debit_reversal
-        - Financial_accounts
-        - Financial_account
-        - Features
-        - Inbound_transfers
-        - Id
-        - Inbound_transfer
-        - Cancel
-        - Outbound_payments
-        - Outbound_transfers
-        - Outbound_transfer
-        - Received_credits
-        - Received_debits
-        - Transaction_entries
-        - Transactio
+      summary: Retrieve Treasury Transactions Id
